@@ -81,6 +81,7 @@
 * Add DPRINTF(2,...) lines to receive() for packet drops.  HStenn.
 * Rename the configuration flag fifo variables.  HStenn.
 * Improve saveconfig output.  HStenn.
+* Decode restrict flags on receive() debug output.  HStenn.
 
 ---
 (4.2.8p10) 2017/03/21 Released by Harlan Stenn <stenn@ntp.org>
